--- a/02-react-exercises/src/index.css
+++ b/02-react-exercises/src/index.css
@@ -36,7 +36,7 @@ input[type='reset'] {
 	border: thin solid #444;
 	border-radius: 0.25rem;
 	padding: 0.5rem 1rem;
-	margin: 0 00.5rem 0 0;
+	margin: 0.3rem;
 	display: inline-block;
 	background-color: #eee;
 	color: #444;
