REDUX Carrito de Compras ( 2 / 2 )

--- a/07-redux/src/index.css
+++ b/07-redux/src/index.css
@@ -15,3 +15,30 @@ code {
 img {
 	max-width: 100%;
 }
+
+.my-page {
+	margin: 2rem auto;
+	padding: 1rem;
+	width: 70%;
+	background-color: #ccc;
+}
+
+.my-cart {
+	margin: 2rem auto;
+	padding: 1rem;
+	width: 70%;
+	background-color: #ccc;
+	justify-content: center;
+	align-items: center;
+}
+
+.grid-responsive {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	gap: 1rem;
+}
+
+.box-cart {
+	box-shadow: 0 0 1rem #00000025 inset;
+	border: 1px solid #f02323b0;
+}
